--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -2209,5 +2209,108 @@ stories:
   state: Wisconsin
   domain: http://www.wausharaargus.com/
   link: https://www.wausharaargus.com/latest-clubs-groups/friends-enjoy-schaum-tortes-wild-rose
+images:
+- name: hollywood-building-hollywood-building-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-sand-paper.jpg
+- name: stories-castle-on-hill-edinburgh-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-on-hill-edinburgh-feed-people.JPG
+- name: status-berlin-status-berlin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gan-vogh.jpg
+- name: oldhotel-oldhotel-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-light-dali.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
+- name: razorwire-DSC-0080-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-really-hot.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dark-soul.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dark-soul.png
+- name: carry-load-carryload-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-atari-asteroids.jpg
+- name: school-clouds-church-clouds-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-plentiful.jpg
+- name: hollywood-building-hollywood-building-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-clean-view.jpg
+- name: white-house-lawn-white-house-lawn.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn.jpg
+- name: mediterranean-mediterranean-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-crafty-painting.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-diego-rivera1.jpg
+- name: art-museum-art-museum-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-oily-mcoilface.jpg
+- name: rain-princess-IMG_8293.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8293.jpg
+- name: lincoln-memorial-lincolnmemorial-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-deep-connections.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-neo-instinct.jpg
+- name: old-door-lock-old-door-lock-2-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-aqua.jpg
+- name: death-valley-death-valley-national-park-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-brush.jpg
+- name: store-on-corner-store-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-creativity.jpg
+- name: catacombs-catacombs-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-diego-rivera1.jpg
+- name: ellis-island-ellis-island-room-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-far-away.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-post-modern.jpg
+- name: border-crossing-bordercrossing-gan-vogh.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-gan-vogh.png
+- name: mistywoods-babyfoot-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-post-modern.jpg
+- name: yuma-bank-yuma-bak-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-alien-goggles.jpg
+- name: old-granary-field-oldhouse-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dali-three.jpg
+- name: legal-statue-legalstatue-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-wols.jpg
+- name: oldtrain-oldtrain-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-smooth-ride.jpg
+- name: old-barn-old-barn-1500-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-wols.jpg
+- name: gypsy-wagon-gypsywagon-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-rainbow-festival.jpg
+- name: window-window-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-alien-goggles.jpg
+- name: containership-containership-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-constitution.jpg
+- name: old-door-lock-old-door-lock-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-creativity.jpg
+- name: oldcabin-oldcabin-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crunch-paper.jpg
+- name: power-lines-power-lines-empty-space-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit.jpg
+- name: store-on-corner-store-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-gan-vogh.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-kand-two.jpg
+- name: store-on-corner-oldcabin-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-satan-red.jpg
+- name: blossombar-post-modern-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-post-modern-file-00-00-50-62.jpg
+- name: oldroad-old-road-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-emily-carr.jpg
+- name: stories-dragon-close-up-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dragon-close-up-clean-view.jpg
+- name: christianity-christianity-under-construction-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-creativity.jpg
+- name: aws-s3-stories-beach-rocks-currents-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beach-rocks-currents-blue-circuit-5.jpg
+- name: oldsmallboat-oldsmallboat-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-green-zuma.jpg
+- name: old-door-lock-old-door-lock-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-brush.jpg
+- name: wind-mills-windmills-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dark-dali.jpg
+- name: power-lines-power-lines-empty-space-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-monet-one.jpg
+- name: blossombar-rainbow-festival-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-rainbow-festival-file-00-00-24-99.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-cinnamon-rolls.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-cinnamon-rolls.png
+- name: san-francisco-street-view-san-francisco-street-view-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alien-goggles.jpg
 ---
 It Was A Less Expensive Time.&nbsp;Hawley Man Thrown From Vehicle In Wednesday Crash Near Lake Park.&nbsp;Jimmy Dore Uses All Kinds Of Media To Make His Comedic Voice As Loud As Possible.&nbsp;Angielski Dominuje Na Maturze.&nbsp;Apartment Project Near Astoria Riverwalk Lands Design Approval.&nbsp;Scott Adermann, 53, Of Huron.&nbsp;Dos And Donts For A Successful Summer Road Trip.&nbsp;Kurt Vile, Umphrey's McGee And Every New Denver Concert Announcement.&nbsp;
